--- a/dito/data/config.cfg
+++ b/dito/data/config.cfg
@@ -1,7 +1,9 @@
 [IMAGES]
 path = data/image_data.csv
+# how many game rounds should be played per task room
 n = 1
 seed = None
+# randomly sample images from the file
 shuffle = True
 
 [TIMERS]
